--- a/src/components/list/z-list-element/styles.css
+++ b/src/components/list/z-list-element/styles.css
@@ -28,6 +28,11 @@
   padding: var(--space-unit) 0;
 }
 
+:host([size="medium"]) > .tree-element-container {
+  padding-top: var(--space-unit);
+  padding-bottom: 0;
+}
+
 :host([size="large"]) > .container {
   min-height: calc(var(--space-unit) * 7);
   padding: calc(var(--space-unit) * 2) 0;
