--- a/src/tokens/themes/default.css
+++ b/src/tokens/themes/default.css
@@ -4,7 +4,7 @@
   --shadow-focus-primary: 0 0 0 2px var(--color-white), 0 0 2px 5px var(--blue800);
 
   /* primary */
-  --color-active-primary: var(--blue800);
+  --color-active-primary: var(--blue400);
   --color-hover-primary: var(--blue800);
   --color-pressed-primary: var(--blue400);
   --color-primary01: var(--blue500);
@@ -28,11 +28,17 @@
 
   /* text */
   --color-default-text: var(--gray900);
-  --color-hover-primary-text: var(--color-black);
+  --color-hover-text: var(--gray800);
+  --color-pressed-text: var(--gray700);
   --color-text-inverse: var(--color-white);
   --color-text02: var(--gray100);
   --color-text03: var(--gray300);
-  --color-text05: var(--gray600);
+  --color-text05: var(--gray500);
+
+  /* disabled */
+  --color-disabled01: var(--gray300);
+  --color-disabled02: var(--gray100);
+  --color-disabled03: var(--gray500);
 
   /* icons */
   --color-active-primary-icon: var(--blue400);
@@ -46,34 +52,19 @@
   --color-pressed-icon: var(--gray700);
   --color-primary01-icon: var(--blue500);
 
-  /* status */
-  --color-danger01: var(--red500);
-  --color-danger02: var(--red500);
-  --color-disabled01: var(--gray300);
-  --color-disabled02: var(--gray100);
-  --color-disabled03: var(--gray500);
-  --color-error-inverse: var(--red50);
-  --color-error01: var(--red500);
-  --color-error02: var(--red500);
-  --color-hover-danger: var(--red700);
-  --color-hover-error: var(--red700);
-  --color-hover-success: var(--green700);
-  --color-hover-warning: var(--yellow700);
+  /* alert */
+  --color-default-error: var(--red500);
+  --color-default-success: var(--green500);
+  --color-default-warning: var(--yellow500);
+  --color-hover-error: var(--red800);
+  --color-hover-success: var(--green800);
+  --color-hover-warning: var(--yellow800);
   --color-inverse-error: var(--red50);
   --color-inverse-hover-error: var(--red500);
   --color-inverse-hover-success: var(--green500);
   --color-inverse-hover-warning: var(--yellow500);
   --color-inverse-success: var(--green50);
   --color-inverse-warning: var(--yellow50);
-  --color-success-inverse: var(--green50);
-  --color-success01: var(--green500);
-  --color-success02: var(--green500);
-  --color-text-error: var(--red700);
-  --color-text-success: var(--color-success-default);
-  --color-text-warning: var(--color-warning-default);
-  --color-warning-inverse: var(--yellow50);
-  --color-warning01: var(--yellow500);
-  --color-warning02: var(--yellow500);
 
   /* forms */
   --color-form-active-primary: var(--blue400);
@@ -85,6 +76,7 @@
   --color-form-disabled03: var(--gray500);
   --color-form-hover-error: var(--red800);
   --color-form-hover-primary: var(--blue800);
+  --color-form-hover-success: var(--green800);
   --color-form-hover-warning: var(--yellow800);
   --color-form-inverse-error: var(--red50);
   --color-form-inverse-success: var(--green50);
@@ -95,14 +87,17 @@
   --color-form-surface04: var(--gray600);
   --color-form-warning01: var(--yellow500);
 
-  /* misc */
-  --color-active-light: var(--blue400);
-  --color-active-tertiary: var(--blue800);
-  --color-hover-tertiary: var(--blue800);
-  --color-hover-surface: var(--gray50);
-  --color-ghost01: var(--gray300);
-  --color-ghost02: var(--gray500);
-  --color-highlight: var(--blue400);
-  --color-hover-light: var(--blue400);
-  --color-selected-light: var(--gray300);
+  /* links */
+  --color-text-link-blue: var(--blue500);
+  --color-text-link-blue-hover: var(--blue800);
+  --color-text-link-blue-active: var(--blue800);
+  --color-text-link-blue-visited: var(--blue800);
+  --color-text-link-blue-pressed: var(--blue400);
+  --color-text-link-red: var(--red500);
+  --color-text-link-red-hover: var(--red800);
+  --color-text-link-red-active: var(--red800);
+  --color-text-link-red-visited: var(--red800);
+  --color-text-link-red-pressed: var(--red400);
+  --color-text-link-inverse: var(--color-white);
+  --color-text-link-default: var(--gray900);
 }
