--- a/src/components/z-input-message/styles.css
+++ b/src/components/z-input-message/styles.css
@@ -17,7 +17,7 @@
 }
 
 :host([status="success"]) {
-  color: var(--color-success01);
+  color: var(--color-hover-success);
 }
 
 :host([status="error"]) {
