--- a/src/components/z-input/styles-general.css
+++ b/src/components/z-input/styles-general.css
@@ -105,7 +105,7 @@ input:not([readonly]):hover,
 
 .input-warning {
   border-color: var(--color-form-hover-warning);
-  background: var(--color-warning-inverse);
+  background: var(--color-inverse-warning);
 }
 
 .input-warning:focus:focus-visible + .icons-wrapper,
