--- a/src/components/z-toast-notification/styles.css
+++ b/src/components/z-toast-notification/styles.css
@@ -147,10 +147,10 @@
   align-items: center;
   justify-content: space-between;
   padding: calc(var(--space-unit) * 1) calc(var(--space-unit) * 2);
-  border-radius: 4px;
+  border-radius: var(--border-size-large);
   box-shadow: var(--shadow-3);
   font-family: var(--font-family-sans);
-  font-size: 14px;
+  font-size: var(--font-size-2);
   font-weight: var(--font-rg);
   letter-spacing: 0.16px;
 }
@@ -173,14 +173,14 @@
 
 :host > #external-container #text {
   margin-right: calc(var(--space-unit) * 2);
-  color: var(--color-white);
+  color: var(--color-text-inverse);
   letter-spacing: 0.16px;
   line-height: 20px;
   text-align: left;
 }
 
 :host > #external-container #text > .title {
-  margin-right: 4px;
+  margin-right: calc(var(--space-unit) / 2);
   font-weight: 600;
 }
 
@@ -191,7 +191,7 @@
 :host > #external-container #icon {
   margin-left: calc(var(--space-unit) * 2);
   cursor: pointer;
-  fill: var(--color-white);
+  fill: var(--color-inverse-icon);
 }
 
 z-icon {
@@ -207,22 +207,20 @@ z-icon:focus {
 }
 
 :host > #external-container.dark {
-  background: var(--gray800);
+  background: var(--color-surface05);
 }
 
 :host > #external-container.light {
-  background: var(--color-background);
+  background: var(--color-surface01);
 }
 
-:host > #external-container.light #icon,
-:host > #external-container.warning #text,
-:host > #external-container.warning #icon {
+:host > #external-container.light #icon {
   fill: var(--color-primary01-icon);
 }
 
 :host > #external-container.light #text,
 :host > #external-container.warning #text {
-  color: var(--gray800);
+  color: var(--color-default-text);
 }
 
 :host > #external-container.accent {
@@ -230,15 +228,19 @@ z-icon:focus {
 }
 
 :host > #external-container.error {
-  background: var(--color-error-default);
+  background: var(--color-danger01);
 }
 
 :host > #external-container.success {
-  background: var(--color-success-default);
+  background: var(--color-success01);
 }
 
 :host > #external-container.warning {
-  background: var(--color-warning-default);
+  background: var(--color-warning01);
+}
+
+:host > #external-container.warning #icon {
+  fill: var(--color-default-icon);
 }
 
 /* Tablet breakpoint */
