--- a/src/components/z-card/styles.css
+++ b/src/components/z-card/styles.css
@@ -111,8 +111,7 @@ Unfortunately the `aspect-ratio` property is still experimental */
 
 ::slotted([slot="title"]) {
   margin: 0;
-  color: inherit;
-  font-size: inherit;
+  font-size: var(--font-size-3);
   font-weight: var(--font-sb);
   -webkit-line-clamp: 2;
   line-clamp: 2;
