--- a/src/components/file-upload/z-dragdrop-area/styles.css
+++ b/src/components/file-upload/z-dragdrop-area/styles.css
@@ -7,7 +7,8 @@
   align-items: center;
   padding: calc(var(--space-unit) * 3);
   background-color: var(--color-surface02);
-  background-image: repeating-linear-gradient(
+  background-image:
+    repeating-linear-gradient(
       0deg,
       var(--color-surface03),
       var(--color-surface03) 12px,
