--- a/src/components/list/z-tree-list/styles.css
+++ b/src/components/list/z-tree-list/styles.css
@@ -1,31 +1,34 @@
+:host {
+  font-family: var(--font-family-sans);
+}
+
 z-list-element {
   position: relative;
   display: block;
+  padding-top: calc(var(--space-unit) * 1.25);
 }
 
 z-list z-list-element::before {
   position: absolute;
   z-index: 100;
-  top: 3px;
-  left: -15px;
+  top: 10px;
+  left: -8px;
   width: 8px;
   height: 1em;
   border-bottom: 1px solid var(--color-disabled01-icon);
   border-left: 1px solid var(--color-disabled01-icon);
   content: "";
-  cursor: pointer;
 }
 
 z-list z-list-element::after {
   position: absolute;
   z-index: 100;
-  top: 5px;
-  left: -15px;
+  top: 10px;
+  left: -8px;
   width: 8px;
   height: 100%;
   border-left: 1px solid var(--color-disabled01-icon);
   content: "";
-  cursor: pointer;
 }
 
 z-list z-list-element:last-child::after {
@@ -43,16 +46,15 @@ z-list > div.children-node {
   padding-left: calc(var(--space-unit) * 2);
 }
 
-z-list-element.grouped-tree-parent-node {
-  padding-top: 0;
-  padding-left: calc(var(--space-unit) * 2);
-}
-
 z-list-element > .list-element {
   display: flex;
   justify-content: space-between;
-  padding: calc(var(--space-unit) * 1.25) 0;
-  cursor: pointer;
+  padding: 0;
+  color: var(--color-default-text);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  text-decoration: none;
 }
 
 z-list-element > .list-element:focus:focus-visible {
@@ -75,41 +77,16 @@ z-list-element .list-element::after {
   transform: translateX(-100%);
 }
 
-z-list-element.tree-search-item {
-  padding-top: 0;
+.item-label {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 0.052px;
+  line-height: 20px; /* 142.857% */
 }
 
-z-list-element.tree-search-item .list-element::after {
-  position: absolute;
-  top: 8px;
-  right: -25px;
-  display: block;
-  width: 100%;
-  height: 40px;
-  content: "";
-  transform: translateX(-100%);
-}
-
-z-list-element.grouped-tree-parent-node .list-element::after {
-  position: absolute;
-  top: 8px;
-  right: -25px;
-  display: block;
-  width: 100%;
-  height: 40px;
-  content: "";
-  transform: translateX(-100%);
-}
-
-z-list-element:not([disabled]) > .list-element:hover,
-z-list-element:not([disabled]) > .list-element:hover::after {
-  z-index: -1;
-  background-color: var(--color-background);
-  cursor: pointer;
-}
-
-.item-label.selected {
-  font-weight: bold;
+.item-label.bold-parent {
+  font-weight: 600;
 }
 
 z-list-element:focus {
@@ -118,49 +95,19 @@ z-list-element:focus {
 }
 
 .item.ellipsis {
-  display: inline-block;
+  display: flex;
   overflow: hidden;
   max-width: 100%;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
 
-z-list > z-list-element.grouped-tree-parent-node > .list-element:hover::after,
-z-list-element.tree-search-item .list-element:hover::after,
-z-list > z-list-group > z-list-element.grouped-tree-parent-node > .list-element:hover::after {
-  position: absolute;
-  z-index: -1;
-  top: 8px;
-  right: -18px;
-  display: block;
-  width: 100%;
-  height: 40px;
-  content: "";
-  transform: translateX(-100%);
-}
-
-z-list-element > .list-element:hover::after {
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  right: 0;
-  display: block;
-  width: 100%;
-  height: 40px;
-  content: "";
-  transform: translateX(-100%);
-}
-
-.children-node z-list-element::before,
-.children-node z-list-element::after {
-  left: -15px;
-}
-
-.children-node .children-node z-list-element::before,
-.children-node .children-node z-list-element::after {
-  left: -15px;
-}
-
 .children-node > z-list-element {
   padding: 0;
+  padding-top: 10px;
+  padding-left: calc(var(--space-unit) * 1.25);
+}
+
+.item-icon {
+  margin-right: var(--space-unit);
 }
