--- a/src/components/z-select/styles.css
+++ b/src/components/z-select/styles.css
@@ -142,3 +142,173 @@
 .reset-item.hide {
   display: none;
 }
+
+.tree-list-reset-item {
+  padding: var(--space-unit) 0;
+}
+
+z-list-element {
+  position: relative;
+  display: block;
+}
+
+z-list z-list-element::before {
+  position: absolute;
+  z-index: 100;
+  top: 3px;
+  left: -15px;
+  width: 8px;
+  height: 1em;
+  border-bottom: 1px solid var(--color-disabled01-icon);
+  border-left: 1px solid var(--color-disabled01-icon);
+  content: "";
+  cursor: pointer;
+}
+
+z-list z-list-element::after {
+  position: absolute;
+  z-index: 100;
+  top: 5px;
+  left: -15px;
+  width: 8px;
+  height: 100%;
+  border-left: 1px solid var(--color-disabled01-icon);
+  content: "";
+  cursor: pointer;
+}
+
+z-list z-list-element:last-child::after {
+  display: none;
+}
+
+z-list > z-list-element::before,
+z-list > z-list-element::after,
+z-list > z-list-group > z-list-element::before,
+z-list > z-list-group > z-list-element::after {
+  display: none;
+}
+
+z-list > div.children-node {
+  padding-left: calc(var(--space-unit) * 2);
+}
+
+z-list-element.grouped-tree-parent-node {
+  padding-top: 0;
+  padding-left: calc(var(--space-unit) * 2);
+}
+
+z-list-element > .list-element {
+  display: flex;
+  justify-content: space-between;
+  padding: calc(var(--space-unit) * 1.25) 0;
+  cursor: pointer;
+}
+
+z-list-element > .list-element:focus:focus-visible {
+  box-shadow: var(--shadow-focus-primary);
+  outline: none;
+}
+
+z-list-element > .list-element .item.ellipsis {
+  overflow: hidden;
+}
+
+z-list-element .list-element::after {
+  position: absolute;
+  top: 0;
+  right: -1px;
+  display: block;
+  width: 100%;
+  height: 40px;
+  content: "";
+  transform: translateX(-100%);
+}
+
+z-list-element.tree-search-item {
+  padding-top: 0;
+}
+
+z-list-element.tree-search-item .list-element::after {
+  position: absolute;
+  top: 8px;
+  right: -25px;
+  display: block;
+  width: 100%;
+  height: 40px;
+  content: "";
+  transform: translateX(-100%);
+}
+
+z-list-element.grouped-tree-parent-node .list-element::before {
+  position: absolute;
+  right: -25px;
+  display: block;
+  width: 100%;
+  height: 40px;
+  content: "";
+  transform: translateX(-100%);
+}
+
+z-list-element:not([disabled]) > .list-element:hover,
+z-list-element:not([disabled]) > .list-element:hover::after {
+  z-index: -1;
+  background-color: var(--color-background);
+  cursor: pointer;
+}
+
+.item-label.selected {
+  font-weight: bold;
+}
+
+z-list-element:focus {
+  box-shadow: var(--shadow-focus-primary);
+  outline: none;
+}
+
+.item.ellipsis {
+  display: inline-block;
+  overflow: hidden;
+  max-width: 100%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+z-list > z-list-element.grouped-tree-parent-node > .list-element:hover::after,
+z-list-element.tree-search-item .list-element:hover::after,
+z-list > z-list-group > z-list-element.grouped-tree-parent-node > .list-element:hover::after {
+  position: absolute;
+  z-index: -1;
+  top: 8px;
+  right: -18px;
+  display: block;
+  width: 100%;
+  height: 40px;
+  content: "";
+  transform: translateX(-100%);
+}
+
+z-list-element > .list-element:hover::after {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  right: 0;
+  display: block;
+  width: 100%;
+  height: 40px;
+  content: "";
+  transform: translateX(-100%);
+}
+
+.children-node z-list-element::before,
+.children-node z-list-element::after {
+  left: -15px;
+}
+
+.children-node .children-node z-list-element::before,
+.children-node .children-node z-list-element::after {
+  left: -15px;
+}
+
+.children-node > z-list-element {
+  padding: 0;
+}
