chore: fix padding

--- a/src/components/list/z-tree-list/styles.css
+++ b/src/components/list/z-tree-list/styles.css
@@ -5,7 +5,7 @@
 z-list-element {
   position: relative;
   display: block;
-  padding-top: calc(var(--space-unit) * 1.25);
+  padding-top: var(--space-unit);
 }
 
 z-list z-list-element::before {
