chore: fix for theme dark

--- a/src/components/list/z-tree-list/styles.css
+++ b/src/components/list/z-tree-list/styles.css
@@ -58,7 +58,7 @@ z-list-element > .list-element {
 }
 
 z-list-element > .list-element.link-clickable {
-  color: var(--color-text-link-blue);
+  color: var(--color-primary01);
 }
 
 z-list-element > .list-element.link-clickable:hover {
