--- a/src/components/list/z-tree-list/styles.css
+++ b/src/components/list/z-tree-list/styles.css
@@ -11,23 +11,23 @@ z-list-element {
 z-list z-list-element::before {
   position: absolute;
   z-index: 100;
-  top: 10px;
+  top: calc(var(--space-unit) * 1.25);
   left: -8px;
-  width: 8px;
-  height: 1em;
-  border-bottom: 1px solid var(--color-disabled01-icon);
-  border-left: 1px solid var(--color-disabled01-icon);
+  width: var(--space-unit);
+  height: calc(var(--space-unit) * 2);
+  border-bottom: var(--border-size-small) solid var(--color-disabled01-icon);
+  border-left: var(--border-size-small) solid var(--color-disabled01-icon);
   content: "";
 }
 
 z-list z-list-element::after {
   position: absolute;
   z-index: 100;
-  top: 10px;
+  top: calc(var(--space-unit) * 1.25);
   left: -8px;
-  width: 8px;
+  width: var(--space-unit);
   height: 100%;
-  border-left: 1px solid var(--color-disabled01-icon);
+  border-left: var(--border-size-small) solid var(--color-disabled01-icon);
   content: "";
 }
 
@@ -51,9 +51,9 @@ z-list-element > .list-element {
   justify-content: space-between;
   padding: 0;
   color: var(--color-default-text);
-  font-size: 14px;
+  font-size: var(--font-size-2);
   font-style: normal;
-  font-weight: 400;
+  font-weight: var(--font-rg);
   text-decoration: none;
 }
 
@@ -75,21 +75,21 @@ z-list-element .list-element::after {
   right: -1px;
   display: block;
   width: 100%;
-  height: 40px;
+  height: calc(var(--space-unit) * 5);
   content: "";
   transform: translateX(-100%);
 }
 
 .item-label {
-  font-size: 14px;
+  font-size: var(--font-size-2);
   font-style: normal;
-  font-weight: 400;
+  font-weight: var(--font-rg);
   letter-spacing: 0.052px;
-  line-height: 20px; /* 142.857% */
+  line-height: 20px;
 }
 
 .item-label.bold-parent {
-  font-weight: 600;
+  font-weight: var(--font-sb);
 }
 
 .item.ellipsis {
@@ -102,7 +102,7 @@ z-list-element .list-element::after {
 
 .children-node > z-list-element {
   padding: 0;
-  padding-top: 10px;
+  padding-top: calc(var(--space-unit) * 1.25);
   padding-left: calc(var(--space-unit) * 1.25);
 }
 
