--- a/src/components/list/z-tree-list/styles.css
+++ b/src/components/list/z-tree-list/styles.css
@@ -11,7 +11,7 @@ z-list-element {
 z-list z-list-element::before {
   position: absolute;
   z-index: 100;
-  top: calc(var(--space-unit) * 1.25);
+  top: 2px;
   left: -8px;
   width: var(--space-unit);
   height: calc(var(--space-unit) * 2);
@@ -23,7 +23,7 @@ z-list z-list-element::before {
 z-list z-list-element::after {
   position: absolute;
   z-index: 100;
-  top: calc(var(--space-unit) * 1.25);
+  top: 2px;
   left: -8px;
   width: var(--space-unit);
   height: 100%;
@@ -102,7 +102,7 @@ z-list-element .list-element::after {
 
 .children-node > z-list-element {
   padding: 0;
-  padding-top: calc(var(--space-unit) * 1.25);
+  padding-top: 2px;
   padding-left: calc(var(--space-unit) * 1.25);
 }
 
