--- a/src/components/list/z-tree-list/styles.css
+++ b/src/components/list/z-tree-list/styles.css
@@ -111,7 +111,7 @@ z-list-element .list-element::after {
 }
 
 .no-icon-label {
-  padding-left: 8px;
+  padding-left: var(--space-unit);
 }
 
 .children-node > z-list-element.no-icon-elm {
