--- a/src/components/list/z-tree-list/styles.css
+++ b/src/components/list/z-tree-list/styles.css
@@ -8,33 +8,29 @@ z-list-element {
   padding-top: var(--space-unit);
 }
 
-z-list z-list-element::before {
+z-list-element::before,
+z-list-element::after {
   position: absolute;
   z-index: 100;
   top: 2px;
   left: -8px;
+  content: "";
+}
+
+z-list z-list-element::before {
   width: var(--space-unit);
   height: calc(var(--space-unit) * 2);
   border-bottom: var(--border-size-small) solid var(--color-disabled01-icon);
   border-left: var(--border-size-small) solid var(--color-disabled01-icon);
-  content: "";
 }
 
 z-list z-list-element::after {
-  position: absolute;
-  z-index: 100;
-  top: 2px;
-  left: -8px;
   width: var(--space-unit);
   height: 100%;
   border-left: var(--border-size-small) solid var(--color-disabled01-icon);
-  content: "";
 }
 
-z-list z-list-element:last-child::after {
-  display: none;
-}
-
+z-list z-list-element:last-child::after,
 z-list > z-list-element::before,
 z-list > z-list-element::after,
 z-list > z-list-group > z-list-element::before,
@@ -47,6 +43,7 @@ z-list > div.children-node {
 }
 
 z-list-element > .list-element {
+  z-index: 100;
   display: flex;
   justify-content: space-between;
   padding: 0;
@@ -123,6 +120,23 @@ z-list-element .list-element::after {
 }
 
 z-list-element > .list-element:focus:focus-visible {
+  position: relative;
+  z-index: 200;
   box-shadow: var(--shadow-focus-primary);
   outline: none;
+}
+
+@media (max-width: 767px) {
+  z-list-element::before,
+  z-list-element::after {
+    top: 3px;
+  }
+
+  z-list z-list-element::before {
+    height: calc(var(--space-unit) * 2.5);
+  }
+
+  .children-node > z-list-element {
+    padding-top: var(--space-unit);
+  }
 }
