--- a/src/components/z-menu-section/styles.css
+++ b/src/components/z-menu-section/styles.css
@@ -130,7 +130,9 @@ when placed below the real text using `flex-direction: column`. */
 
 ::slotted([slot="section"]:hover),
 ::slotted([slot="section"]:focus:focus-visible),
-::slotted([slot="section"][active]) {
+::slotted([slot="section"]:active),
+::slotted([slot="section"][active]),
+::slotted([slot="section"][data-active]) {
   color: var(--color-primary01);
   font-weight: var(--font-bd);
 }
